# mitski

./: .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY_VPS.md  Dockerfile  LOGS.md  Makefile  QUICKSTART.md  README.md  RELATORIO_BUGS_RECUPERACAO.md  SETUP.md  TESTING.md  alembic.ini  bandit.yaml  bot_manager.py  docker-compose.production.yml  docker-compose.yml  inicialmenu.txt  main.py  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  test_antispam.py  test_banned_user.py  view_logs.sh
alembic/: env.py
core/: config.py  rate_limiter.py  redis_client.py  security.py  telemetry.py  token_costs.py
database/: __init__.py  audio_preferences_repo.py  credits_models.py  credits_repos.py  models.py  repos.py  stats_costs.py  stats_models.py  stats_repos.py  tracking_db.py  tracking_models.py  tracking_repos.py  tracking_stats_repo.py
docs/: DEBUG_COMMANDS.md  credits.md  notifications.md  prompt_import_export.md  rastreio.md  recovery.md  start_message.md  stats_menu.md  test_report.md
documentacao/: audio_config.md  instalacao_ofertas.md  ofertas.md  recuperacao.md  sistema_acoes.md  sistema_ofertas.md  sistema_upsells.md  start_template.md
handlers/: __init__.py  ai_handlers.py  antispam_handlers.py  bot_handlers.py  credits_handlers.py  debug_commands.py  debug_commands_router.py  manager_handlers.py  mirror_handlers.py  phase_handlers.py  stats_handlers.py  stats_renderer.py
nginx/: default.conf
redis/: redis.conf
scripts/: backup.sh  deploy.sh  generate_key.py  health-check.sh  (+4 more)
(+197 files in other folders)
